Provide a service from an automatic module